# xml2lab

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
sinsy/lib/label/: LabelMaker.cpp
sinsy/lib/util/: Configurations.cpp  MacronTable.cpp  PhonemeTable.cpp  util_types.h
