EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL NEWS README.md
SUBDIRS = bin

dicdir = $(datadir)/$(PACKAGE)/dic
dic_DATA = sinsy/dic/*.conf sinsy/dic/*.table sinsy/dic/*.macron

DISTCLEANFILES = *.log *.out *~ config/*~ include/*~

MAINTAINERCLEANFILES = aclocal.m4 configure Makefile.in config/compile \
			config/config.guess config/config.sub config/depcomp \
			config/install-sh config/missing
